# pokebot_evolved

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: pokebot_evolved.py
src/namegen/: formatData.py  justNames.py  modelEvaluator.py  nameGenInterface.py  nameModel.py  namegen.py  syllabizeNames.py  trainer.py
src/namegen/data/: bigDataSyllabized.csv  gen01.csv  gen04.csv  gen06.csv  gen07.csv  gen08.csv  names.csv  pkmn_dataset.csv  pokemonSyllabized.csv
src/namegen/outputs/: allmodeloutput.txt  last100epochsoutput.txt
src/namegen/weights/savedmodels/: thechosenone-12.11.e448.pth
src/statgen/: statgen.py  statgenTraining.py
src/statgen/data/: finalData.csv
src/type_classifier/: __init__.py  namesyllabletype.py  typeClassifier.py  typeClassifierForest.py  typeUtils.py
src/type_classifier/data/: type_syllable.csv
